syntax = "proto3";

package golem.component;

import "wasm/rpc/type.proto";
import "golem/rib/instance_type.proto";

message FunctionConstraint {
    golem.rib.FunctionNameType function_key = 1;
    repeated wasm.rpc.Type parameter_types = 2;
    optional wasm.rpc.Type return_type = 3;
    uint32 usage_count = 4;
}
